--- a/gb/22/5/17/n13739350.md
+++ b/gb/22/5/17/n13739350.md
@@ -167,7 +167,7 @@
 
 
 <strong>编辑推荐：</strong>
-<li><a href="https://github.com/ychojm359/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank">303万人举报江泽民</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/18/9/11/n10705738.md#1" target="_blank">古玉文：红谍郭汝瑰不忘初心 助共为虐食苦果</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/19/7/29/n11417416.md#1" target="_blank">美大使发推特 谴责中共迫害法轮功</a></li>
+<li><a href="https://github.com/ychojm359/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank">探寻真相兼听则明</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/18/10/3/n10757327.md#1" target="_blank">共产暴政录：长春围城饿毙几十万人真相</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/12/9/15/n3683727.md#1" target="_blank">历史回顾：公安部给李洪志先生的感谢信</a></li>
 <hr>
 
 <strong>热门新闻：</strong>
